@@ -1,3 +1,8 @@
+2009-11-04  Jason Merrill  <jason@redhat.com>
+
+	PR c++/35067
+	* g++.dg/abi/thunk5.C: New.
+
 2009-11-04  Dodji Seketeli  <dodji@redhat.com>
 
 	Revert fix for PR c++/37093
